objects/ChargentOrders__ChargentOrder__c.object
<CustomObject>
    <fields>
        <fullName>ChargentOrders__OrderSource__c</fullName>
        <description>The Order Source field defines the order entry source for this transaction.</description>
        <inlineHelpText>The Order Source field defines the order entry source for this transaction.</inlineHelpText>
        <label>Order Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate Cash Disbursement</fullName>
                </value>
                <value>
                    <fullName>ecommerce</fullName>
                    <default>true</default>
                    <label>E-commerce</label>
                </value>
                <value>
                    <fullName>installment</fullName>
                    <label>Installment</label>
                </value>
                <value>
                    <fullName>mailorder</fullName>
                    <label>Mail</label>
                </value>
                <value>
                    <fullName>Prearranged Payment and Deposit</fullName>
                </value>
                <value>
                    <fullName>recurring</fullName>
                    <label>Recurring</label>
                </value>
                <value>
                    <fullName>Recurring Mail</fullName>
                </value>
                <value>
                    <fullName>recurringtel</fullName>
                    <label>Recurring Telephone</label>
                </value>
                <value>
                    <fullName>retail</fullName>
                    <label>Retail</label>
                </value>
                <value>
                    <fullName>telephone</fullName>
                    <label>Telephone</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__Order_Information__c</fullName>
        <description>Stores user entered data about this record. The contents of this field are sent the gateway when Level III transactions are initiated, and are typically mapped to the &quot;Description&quot; field on the gateway&apos;s transaction record</description>
        <inlineHelpText>For Authorize.net only.  Enter information about this opportunity to be sent to the gateway.</inlineHelpText>
        <label>Order Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Order_Link__c</fullName>
        <description>This field is used to provide a hyperlink pointing to the Chargent Order record that can be used in reporting and list views.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id,  ChargentOrders__Billing_Last_Name__c &amp; &quot;, &quot; &amp;  ChargentOrders__Billing_First_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Order_Note__c</fullName>
        <description>allow users to type a short note</description>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__PO_Number__c</fullName>
        <description>For Level II transactions, this field records the Purchase Order number for the card being used. This is also known as the &quot;Customer Code.&quot;</description>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Payment_Count__c</fullName>
        <description>When the Payment Stop rule of &quot;Count&quot; is selected for recurring orders, this field dictates the number of payments to be collected before the recurring order stops.</description>
        <label>Payment Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Payment_End_Date__c</fullName>
        <description>When the Payment Stop rule of &quot;Date&quot; is slected, this field determins the date on which this recurring order will stop.</description>
        <inlineHelpText>If &quot;Payment Stop&quot; is set to &quot;Date&quot; please enter the date when the payments will stop</inlineHelpText>
        <label>Payment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Payment_Frequency__c</fullName>
        <description>The frequency on which this recurring order will collect payments. 
E.g., Daily, Weekly, Monthly.</description>
        <inlineHelpText>Once - Single time
Daily - Each day
Weekly - Every 7 days
Monthly - Monthly same date
Bimonthly - Every 2nd mo. same date
Quarterly - Every 4th mo. same date
Semiannual - Every 6th mo. same date
Annual - Same date each year
Biennial-  2 years</inlineHelpText>
        <label>Payment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Once</fullName>
                    <default>true</default>
                    <label>Once</label>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Biweekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Bimonthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semiannual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Biennial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__Payment_Method__c</fullName>
        <description>The type of payment source used for payment on this order.

E.g., Credit Card, Bank Account, Money Order, Cash</description>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Check (Paper)</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Money Order</fullName>
                </value>
                <value>
                    <fullName>Google Checkout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__Payment_Received__c</fullName>
        <description>This field displays whether a payment for this order has been received. It will show &apos;None,&apos; &apos;Partial,&apos; or &apos;Full.&apos;</description>
        <label>Payment Received</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__Payment_Start_Date__c</fullName>
        <description>Chargent will not attempt to charge this record until the Start Date</description>
        <inlineHelpText>Chargent will not attempt to charge this record until the Start Date</inlineHelpText>
        <label>Payment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Payment_Status__c</fullName>
        <description>Reflects the status of this order. For instance, recurring orders will show &quot;Recurring.&quot; Orders in collections status will show &quot;Automated Collection.&quot; Recurring orders that have failed and AREN&apos;T in collections will show &quot;Error.&quot;</description>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Stopped</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Automated Collection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__Payment_Stop__c</fullName>
        <description>This field determins the stop-rule for a recurring order.
DATE = Recurring schedule stops on a specific date
COUNT = Recurring schedule stops after a specific number of charges completes
BALANCE DUE = Recurring schedule stops after a specific amount has been reached
UNENDING = Recurring schedule doesn&apos;t stop unless manually stopped</description>
        <label>Payment Stop</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ChargentOrders__Payment_Frequency__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Count</fullName>
                </value>
                <value>
                    <fullName>Balance Due</fullName>
                </value>
                <value>
                    <fullName>Unending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__Shipping_Address_Line_2__c</fullName>
        <description>For Level II transactions, this field records the apt, unit, floor, or suite of the shipping address associated with this order.</description>
        <label>Shipping Address Line 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Shipping_Address__c</fullName>
        <description>For Level II transactions, this field records the street name and number of the shipping address associated with this order.</description>
        <label>Shipping Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Shipping_City__c</fullName>
        <description>For Level II transactions, this field records the city of the shipping address associated with this order.</description>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Shipping_Company__c</fullName>
        <description>For Level III transactions, this field records the duty for shipping to the shipping address associated with this order. This is used within the following gateways:

Auth.net
Cybersource
FatZebra
Forte
NMI
Orbital
Paytrace
USAEPay</description>
        <label>Shipping Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Shipping_Country__c</fullName>
        <description>For Level II transactions, this field records the country of the shipping address associated with this order.</description>
        <label>Shipping Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia (Plurinational State of)</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__Shipping_Duty__c</fullName>
        <description>For Level II &amp; III transactions, this field records the duty for shipping to the shipping address associated with this order.</description>
        <label>Shipping Duty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Shipping_First_Name__c</fullName>
        <description>For Level II transactions, this field records the first name at the shipping address associated with this order.</description>
        <label>Shipping First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Shipping_Instructions__c</fullName>
        <description>For Level II transactions, this field records the shipping instructions associated with this order.</description>
        <label>Shipping Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Shipping_Name__c</fullName>
        <description>For Level II transactions, this field records the last name at the shipping address associated with this order.</description>
        <label>Shipping Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Shipping_Phone__c</fullName>
        <description>For Level II transactions, this field records the phone number at the shipping address associated with this order.</description>
        <label>Shipping Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Shipping_State__c</fullName>
        <description>For Level II transactions, this field records the state of the shipping address associated with this order.</description>
        <label>Shipping State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Guam</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__Shipping_Zip_Postal__c</fullName>
        <description>For Level II transactions, this field records the zip / postal code at the shipping address associated with this order.</description>
        <label>Shipping Zip/Postal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Shipping__c</fullName>
        <description>For Level III transactions, this field records the shipping cost to ship to the address associated with this order.</description>
        <label>Shipping Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__Subtotal__c</fullName>
        <description>The subtotal is the amount due before taxes, shipping, or other fees are added to the order.</description>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Tax_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in Level II data to indicate that this order is Tax Exempt.</description>
        <label>Tax Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Tax__c</fullName>
        <description>For Level II transactions, this field reflects the tax charged for this order.</description>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Tokenization__c</fullName>
        <description>This displays the token received from the gateway that replaces the payment source data.

Tokenization must be enabled at both in your gateway&apos;s administration portal and in the Chargent gateway record configuration.

This field is typically managed by Chargent.  

During data migrations one will often update this field.</description>
        <inlineHelpText>A unique token provided by the Gateway which replaces the payment account information on a transaction.</inlineHelpText>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Total__c</fullName>
        <description>This field is calculated by adding subtotal, tax and shipping together.

The total field populates the Charge Amount field, when Manual Charge is set to FALSE.

ChargentOrders__Subtotal__c + ChargentOrders__Tax__c + ChargentOrders__Shipping__c</description>
        <formula>ChargentOrders__Subtotal__c  +  ChargentOrders__Tax__c  +  ChargentOrders__Shipping__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Tracking_Number__c</fullName>
        <description>May be used to document the courier tracking number for an order involving a shipment.</description>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Transaction_Count_Recurring__c</fullName>
        <description>Total number of &quot;Approved&quot; transactions created by a recurring payment schedule. The formula used:

(Response StatusEQUALSApproved, Pre-settlement) AND (RecurringEQUALSTrue) AND (TypeEQUALSCharge, Batch Processing)</description>
        <inlineHelpText>Total number of &quot;Approved&quot; transactions created by a recurring payment schedule</inlineHelpText>
        <label>Transaction Count Recurring</label>
        <summaryFilterItems>
            <field>ChargentOrders__Transaction__c.ChargentOrders__Response_Status__c</field>
            <operation>equals</operation>
            <value>Approved, Pre-settlement</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ChargentOrders__Transaction__c.ChargentOrders__Recurring__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ChargentOrders__Transaction__c.ChargentOrders__Type__c</field>
            <operation>equals</operation>
            <value>Charge, Batch Processing</value>
        </summaryFilterItems>
        <summaryForeignKey>ChargentOrders__Transaction__c.ChargentOrders__Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Transaction_Count__c</fullName>
        <description>This field provides a total of all transactions created for this Order record.</description>
        <inlineHelpText>Count of all Transactions</inlineHelpText>
        <label>Transaction Count</label>
        <summaryForeignKey>ChargentOrders__Transaction__c.ChargentOrders__Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Transaction_Total__c</fullName>
        <description>Total of all Charges and Refunds (expressed in negative) with a Response of &quot;Approved&quot;</description>
        <inlineHelpText>Total of all Charges and Refunds (expressed in negative) with a Response of &quot;Approved&quot;</inlineHelpText>
        <label>Transaction Total</label>
        <summarizedField>ChargentOrders__Transaction__c.ChargentOrders__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ChargentOrders__Transaction__c.ChargentOrders__Response_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ChargentOrders__Transaction__c.ChargentOrders__Type__c</field>
            <operation>equals</operation>
            <value>Charge, Refund, Credit</value>
        </summaryFilterItems>
        <summaryForeignKey>ChargentOrders__Transaction__c.ChargentOrders__Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Update_Token__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is used by the createTransaction method to indicate whether a transaction being created should update the stored token (in cases where a new token is provided by the gateway).</description>
        <label>Update Token</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__UseTokenization__c</fullName>
        <description>If TRUE then the associated Gateway record has Tokenization enabled, if FALSE the associated Gateway record does not have tokenization enabled.</description>
        <formula>IF(ChargentOrders__Gateway__r.ChargentBase__Use_Tokenization__c, &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field simply states whether or not the associated gateway record has tokenization enabled.</inlineHelpText>
        <label>Use Tokenization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Chargent Orders</relationshipLabel>
        <relationshipName>Chargent_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Chargent Orders</relationshipLabel>
        <relationshipName>Chargent_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Chargent Order</label>
    <listViews>
        <fullName>ChargentOrders__All</fullName>
        <columns>NAME</columns>
        <columns>ChargentOrders__Gateway__c</columns>
        <columns>ChargentOrders__Payment_Received__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ChargentOrders__Payment_Status__c</columns>
        <columns>ChargentOrders__Billing_First_Name__c</columns>
        <columns>ChargentOrders__Billing_Last_Name__c</columns>
        <columns>ChargentOrders__Customer_Token__c</columns>
        <columns>ChargentOrders__Billing_Email__c</columns>
        <columns>ChargentOrders__Charge_Amount__c</columns>
        <columns>ChargentOrders__Account__c</columns>
        <columns>Asset__c</columns>
        <columns>ChargentOrders__Order_Note__c</columns>
        <columns>ChargentOrders__Payment_Frequency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ChargentOrders__Account__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ChargentOrders__Orders_with_Payment_Data</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>ChargentOrders__Gateway__c</columns>
        <columns>ChargentOrders__Account__c</columns>
        <columns>ChargentOrders__Charge_Amount__c</columns>
        <columns>ChargentOrders__Card_Type__c</columns>
        <columns>ChargentOrders__Card_Last_4__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ChargentOrders__Subtotal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ChargentOrders__Tokenization__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ChargentOrders__Charge_Amount__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ChargentOrders__Card_Last_4__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Orders with Payment Data</label>
    </listViews>
    <listViews>
        <fullName>ChargentOrders__Recurring_Errors</fullName>
        <columns>NAME</columns>
        <columns>ChargentOrders__Account__c</columns>
        <columns>ChargentOrders__Charge_Amount__c</columns>
        <columns>ChargentOrders__Next_Transaction_Date__c</columns>
        <columns>ChargentOrders__Payment_Status__c</columns>
        <columns>ChargentOrders__Payment_Frequency__c</columns>
        <columns>ChargentOrders__Payment_Stop__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ChargentOrders__Subtotal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ChargentOrders__Payment_Status__c</field>
            <operation>equals</operation>
            <value>Recurring</value>
        </filters>
        <label>Recurring Errors</label>
    </listViews>
    <listViews>
        <fullName>ChargentOrders__Recurring_Payments</fullName>
        <columns>NAME</columns>
        <columns>ChargentOrders__Charge_Amount__c</columns>
        <columns>ChargentOrders__Payment_Status__c</columns>
        <columns>ChargentOrders__Payment_Frequency__c</columns>
        <columns>ChargentOrders__Payment_Start_Date__c</columns>
        <columns>ChargentOrders__Payment_Stop__c</columns>
        <columns>ChargentOrders__Next_Transaction_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ChargentOrders__Account__c</columns>
        <columns>ChargentOrders__Subtotal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ChargentOrders__Payment_Status__c</field>
            <operation>equals</operation>
            <value>Recurring</value>
        </filters>
        <label>Recurring Payments</label>
    </listViews>
    <listViews>
        <fullName>ChargentOrders__Recurring_Status</fullName>
        <columns>NAME</columns>
        <columns>ChargentOrders__Transaction_Count_Recurring__c</columns>
        <columns>ChargentOrders__Transaction_Count__c</columns>
        <columns>ChargentOrders__Payment_Count__c</columns>
        <columns>ChargentOrders__Payment_Frequency__c</columns>
        <columns>ChargentOrders__Payment_Method__c</columns>
        <columns>ChargentOrders__Payment_Received__c</columns>
        <columns>ChargentOrders__Payment_Start_Date__c</columns>
        <columns>ChargentOrders__Payment_Status__c</columns>
        <columns>ChargentOrders__Payment_Stop__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ChargentOrders__Payment_Status__c</field>
            <operation>equals</operation>
            <value>Recurring</value>
        </filters>
        <label>Recurring Status</label>
    </listViews>
    <nameField>
        <displayFormat>ORD-{000000000}</displayFormat>
        <label>Order ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chargent Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ChargentOrders__Customer_IP_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(NOT(ISBLANK(ChargentOrders__Customer_IP__c )) ,IF( NOT(REGEX(ChargentOrders__Customer_IP__c,&quot;^((25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\\.){3}(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)$&quot;)),true,false),false)</errorConditionFormula>
        <errorMessage>Invalid Customer IP</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ChargentOrders__Payment_Account_Required</fullName>
        <active>true</active>
        <description>When the Accounting Seed integration is on, an Account is required.</description>
        <errorConditionFormula>IF( ChargentOrders__Gateway__r.ChargentBase__Accounting_Seed_Integration__c=TRUE,
ISBLANK(ChargentOrders__Account__c),
FALSE)</errorConditionFormula>
        <errorDisplayField>ChargentOrders__Account__c</errorDisplayField>
        <errorMessage>You must enter an Account for the Accounting Seed integration to work with Chargent payment processing for salesforce.</errorMessage>
    </validationRules>
</CustomObject>